Fixed css for mav items on non mobile divices. Added Link to rehearsal.  Still need to hook it up with router.

--- a/src/components/navigation/navigationItem/navigationItem.css
+++ b/src/components/navigation/navigationItem/navigationItem.css
@@ -33,10 +33,12 @@
         height: 100%;
         width: auto;
         align-items: center;
+        line-height: 100%;
+
     }
 
     .NavigationItem a{
-        color: black;
+        color: white;
         text-decoration: none;
         height: 100%;
         padding: 16px 10px;
